@@ -51,6 +51,11 @@ CSTD_CFLAGS=-std=c89
 
 DEBUG_CFLAGS=-ggdb -O2
 #DEBUG_CFLAGS=-ggdb -O0
+#DEBUG_CFLAGS=-ggdb -O2 \
+# -Wno-unused-parameter \
+# -DEBA_SKIP_STRUCT_NULL_CHECK \
+# -DEBA_SKIP_STRUCT_BITS_NULL_CHECK \
+# -DEBA_SKIP_ARRAY_INDEX_OVERRUN_SAFETY
 
 NOISY_CFLAGS=-Wall -Wextra -pedantic -Werror
 
